compiler/test-data/parser/layout/errors/mismatched_columns.frel
module test.layout.errors.mismatched_columns

// ERROR: Rows have different column counts
blueprint MismatchedColumns {
    """layout
    | a | b | c |
    | x | y |
    """
}
